demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx
spec:
  selector:
    app: demo-nginx
  ports:
  - protocol: "TCP"
    port: 80
