demo/ingress-me.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-me
  namespace: default    # namespace must be the same as the backend service!
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test.imicros.de # CHANGE ME!
    http:
      paths:
      - path: /me
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
